2005-09-21 Pierrick LE GALL

	* bug 151 fixed: default maxheight was not proposed as "set to"
	option in admin/user_list

2005-09-21 Pierrick LE GALL

	* bug 150 fixed: in category permissions management, wrong column
	name when using an external users table.

2005-09-20 Pierrick LE GALL

	* update: upgrade from 1.4.0 or 1.4.1. Upgrade from 1.3.x is not
	available anymore.

	* update: README files updated for very near branch 1.5 :-)

	* new: file tools/config_local.inc.php as example for optional
	include/config_local.inc.php

	* bug fixed: configuration parameter show_picture_name_on_title
	was useless

2005-09-18 Pierrick LE GALL

	* bug 111 fixed: "Can't add virtual category when cookie
	disabled". Correction reported from branch 1.4.

	* bug 109 fixed : "disabled "best rated" menu item when rating is
	not enabled". Correction reported from branch 1.4.

	* bug 95 fixed : "default maxwidth and maxheight not registered
	". Correction reported from branch 1.4.

2005-09-18 Pierrick LE GALL

	* bug 107 fixed: crash when logging visit on a category containing
	"'" character. Correction reported from branch 1.4

	* bug fixed: in admin/stats, incorrect SQL queries gave no result.

2005-09-18 Pierrick LE GALL

	* bug 101 fixed: "problem with IE search on keywords". correction
	reported from branch 1.4

2005-09-17 Pierrick LE GALL

	* new: automatic new password sent by mail when requested by user

2005-09-17 Pierrick LE GALL

	* improvement: add information about how to use an external table
	for users
	
	* bug fixed: uses user configuration fields for filtering in
	admin/user_list

	* bug fixed: don't try to create feeds automatically during
	sync_users (when line in user_infos is missing)

	* bug fixed: create_user_infos function gives status admin if user
	id matches $conf['webmaster_id']

2005-09-17 Pierrick LE GALL

	* new: the number of elements waiting for validation is notified
	in RSS feed.

2005-09-17 Pierrick LE GALL
