@@ -1,5 +1,10 @@
 2005-09-21 Pierrick LE GALL
 
+	* bug 162 fixed: division by zero when trying to view "all" items
+	in admin/element_set_(global|unit)
+	
+2005-09-21 Pierrick LE GALL
+
 	* bug 151 fixed: default maxheight was not proposed as "set to"
 	option in admin/user_list
 
